# EVCA

./: main.py  pyproject.toml  setup.py
evca/: __init__.py  analyze.py  main.py
evca.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
evca/libs/: EVCA.py  SITI.py  __init__.py  dct_butterfly_torch.py  feature_extraction.py  frame_to_edge.py  write_block_info.py
libs/: video_to_frame.py
