[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evca"
version = "0.1.0"
description = "Enhanced Video Complexity Analyzer"
readme = "README.md"
authors = [{ name = "Emanuele Artioli" }]
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.24",
    "pandas>=1.5",
    "torch>=2.0",
    "torch-dct>=0.1.6",
    "pytorch-wavelets>=1.3.0",
    "matplotlib>=3.6",
]

[project.urls]
Homepage = "https://github.com/emanuele-artioli/EVCA"

[project.scripts]
evca = "evca.main:main"

[tool.setuptools.packages.find]
include = ["evca", "evca.*"]
